--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <div id="occupation">Student</div>
             <div id="contacts">
                 <i class="fas fa-map-marker-alt">Kontula, Helsinki</i>
-                <i class="fas fa-phone-alt">+35855555555</i>
-                <i class="far fa-envelope"> abc@gmail.com</i>
+                <i class="fas fa-phone-alt">+358451198000</i>
+                <i class="far fa-envelope"> angle_amort@yahoo.com</i>
                 <a class="links" href="https://google.com/">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
